hero section done

--- a/index.html
+++ b/index.html
@@ -7,6 +7,35 @@
                 <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-                
+                <!-- header section start -->
+                <header>
+                                <div class="header-first-content">
+                                                <div><h3>Md.Mollek</h3></div>
+                                                <div>
+                                                <button class="btn-1">Download Resume</button>
+                                                </div>
+                                </div>
+                                <div class="header-second-content">
+                                                <div>
+                                                                <img src="../B10A1-Challenge-Begins/assets/Group.png" alt="">
+                                                </div>
+                                                <div>
+                                                                <h1>"In the near future, <br>I hope to become a Developer."</h1>
+                                                                <p>A developer is a digital craftsman, weaving logic, creativity, and persistence into solutions, transforming abstract ideas into functional <br> realities that shape the future of technology and innovation.</p>
+                                                </div>
+
+                                </div>
+
+
+
+                </header>
+
+                <!-- main section start -->
+                 <main>
+
+                 </main>
+
+                 <!-- footer section start -->
+          
 </body>
 </html>
