--- a/index.html
+++ b/index.html
@@ -85,6 +85,50 @@
                                 <section class="second-section">
                                                 <h1>My Inspiration</h1>
                                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit numquam doloribus harum <br> perspiciatis accusamus voluptatibus ipsa expedita nobis tempora magni.</p>
+                                                <div class="second-section-video">
+                                                  <iframe 
+                                                    width="770px" 
+                                                    height="475px" 
+                                                    src="https://www.youtube.com/embed/DGHn2uOAVCE" 
+                                                    title="শূন্য থেকে জব রেডি ক্যারিয়ার গড়ার সিরিয়াস চ্যালেঞ্জ || Zero to Career Challenge" 
+                                                    frameborder="0" 
+                                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                                                    referrerpolicy="strict-origin-when-cross-origin" 
+                                                    allowfullscreen>
+                                                  </iframe>
+                                                </div>
+                                                
+
+                                </section>
+
+
+                                <section class="third-section">
+                                  <div class="third-section-content">
+                                    <h1>My Current Target</h1>
+                                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellat quibusdam eveniet <br> libero alias animi suscipit facere ullam, amet iusto maiores!</p>
+                                  </div>
+
+                                  <div class="third-section-main-content">
+                                         <div class="third-section-content-1">
+                                            <img src="..//B10A1-Challenge-Begins/assets/html.png" alt="">
+                                            <h1>HTML</h1>
+                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, architecto?</p>
+                                            <h6>Learn More</h6>
+                                         </div>
+                                         <div class="third-section-content-2">
+                                            <img src="..//B10A1-Challenge-Begins/assets/css.png" alt="">
+                                            <h1>CSS</h1>
+                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, architecto?</p>
+                                            <h6>Learn More</h6>
+                                         </div>
+                                         <div class="third-section-content-3">
+                                            <img src="..//B10A1-Challenge-Begins/assets/js.png" alt="">
+                                            <h1>Java Script</h1>
+                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, architecto?</p>
+                                            <h6>Learn More</h6>
+                                         </div>
+
+                                  </div>
 
                                 </section>
 
