footer section start

--- a/index.html
+++ b/index.html
@@ -132,6 +132,46 @@
 
                                 </section>
 
+                                <section class="fourth-section">
+                                  <div class="third-section-content">
+                                    <h1>My Next Target</h1>
+                                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellat quibusdam eveniet <br> libero alias animi suscipit facere ullam, amet iusto maiores!</p>
+                                  </div>
+
+                                  <div class="fourth-section-main-content">
+
+                                    <div class="fourth-section-main-content-1">
+                                      <img src="..//B10A1-Challenge-Begins/assets/react.png" alt="">
+                                      <div class="third-section-content-10">
+                                        <h1>ReactJS</h1>
+                                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit adipisci est, quos ad libero maxime? Sunt ullam ea blanditiis quam.</p>
+                                        <h6>Learn More</h6>
+                                      </div>
+
+                                    </div>
+                                    <div class="fourth-section-main-content-1">
+                                      <img src="..//B10A1-Challenge-Begins/assets/nodejs.png" alt="">
+                                      <div class="third-section-content-10">
+                                        <h1>NodeJS</h1>
+                                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit adipisci est, quos ad libero maxime? Sunt ullam ea blanditiis quam.</p>
+                                        <h6>Learn More</h6>
+                                      </div>
+
+                                    </div>
+                                    <div class="fourth-section-main-content-1">
+                                      <img src="..//B10A1-Challenge-Begins/assets/mongodb.png" alt="">
+                                      <div class="third-section-content-10">
+                                        <h1>MongoDB</h1>
+                                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit adipisci est, quos ad libero maxime? Sunt ullam ea blanditiis quam.</p>
+                                        <h6>Learn More</h6>
+                                      </div>
+
+                                    </div>
+
+                                  </div>
+
+                                </section>
+
 
 
                  </main>
